--- a/_config.yml
+++ b/_config.yml
@@ -4,12 +4,13 @@
 
 # Site
 title: Joyo Blog
-subtitle: Joyo的个人博客
-description: ''
-keywords:
-author: John Doe
+subtitle: Joyo的个人博客，文章归档。
+description: 高并发，分布式，高性能，Java,Go,hexo博客文章归档。
+# keywords:Joyo,Java,Go,js,高并发，分布式，高性能，数据库，博客。
 language: zh-CN
 timezone: ''
+favicon: https://i.loli.net/2019/11/18/LmViUpwhkIvETsl.png
+avatar: https://i.loli.net/2019/11/26/rMENFR9PhXZ6yj8.jpg
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
