--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "hexo-generator-json-content": "^4.1.6",
     "hexo-generator-search": "^2.4.0",
     "hexo-generator-tag": "^1.0.0",
+    "hexo-related-popular-posts": "^3.0.6",
     "hexo-renderer-ejs": "^1.0.0",
     "hexo-renderer-less": "^1.0.0",
     "hexo-renderer-marked": "^2.0.0",
