--- a/themes/material-x/_config.yml
+++ b/themes/material-x/_config.yml
@@ -58,7 +58,7 @@ backstretch:
 cover:
   scheme: search    # 后期将会提供多种封面方案
   height: half      # full（默认值）: 首页封面占据整个第一屏幕，其他页面占半个屏幕高度， half: 所有页面都封面都只占半个屏幕高度
-  title: Demo
+  title: JoyoBlog
   # logo: assets/logo.png    # logo和title只显示一个，若同时设置，则只显示logo
   # search_placeholder: '搜索'
   # 主页封面菜单
@@ -147,7 +147,8 @@ layout:
 sidebar:
   - widget: author
     avatar: https://i.loli.net/2019/11/26/rMENFR9PhXZ6yj8.jpg
-    social: true
+    jinrishici: 体验生活，全面发展    
+    # social: true
   - widget: toc
   - widget: grid
     icon: fas fa-map-signs
