--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,8 @@
 title: Joyo Blog
 subtitle: Joyo的个人博客，文章归档。
 description: 高并发，分布式，高性能，Java,Go,hexo博客文章归档。
-# keywords:Joyo,Java,Go,js,高并发，分布式，高性能，数据库，博客。
+keywords: Joyo,Java,Go,js,高并发，分布式，高性能，数据库，博客。
+author: Joyo
 language: zh-CN
 timezone: ''
 favicon: https://i.loli.net/2019/11/18/LmViUpwhkIvETsl.png
