update deploy git

--- a/_config.yml
+++ b/_config.yml
@@ -97,4 +97,5 @@ theme: material-x
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-  type: ''
+  type: git
+  repo: https://github.com/littlejoyo/littlejoyo.github.io.git
