--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Joyo Blog
+title: JoyoHub
 subtitle: Joyo的个人博客，文章归档。
 description: 高并发，分布式，高性能，Java,Go,hexo博客文章归档。
 keywords: Joyo,Java,Go,js,高并发，分布式，高性能，数据库，博客。
