--- a/themes/material-x/_config.yml
+++ b/themes/material-x/_config.yml
@@ -58,7 +58,7 @@ backstretch:
 cover:
   scheme: search    # 后期将会提供多种封面方案
   height: half      # full（默认值）: 首页封面占据整个第一屏幕，其他页面占半个屏幕高度， half: 所有页面都封面都只占半个屏幕高度
-  title: JoyoBlog
+  title: JoyoHub
   # logo: assets/logo.png    # logo和title只显示一个，若同时设置，则只显示logo
   # search_placeholder: '搜索'
   # 主页封面菜单
@@ -73,6 +73,10 @@ cover:
       icon: fas fa-archive
       url: archives/
       rel: nofollow
+    - name: 算法
+      icon: fas fa-battery-half
+      url: code/
+      rel: nofollow
     - name: 友链
       icon: fas fa-link
       url: friends/
@@ -81,7 +85,6 @@ cover:
       icon: fas fa-info-circle
       url: about/
       rel: nofollow
-
 
 # 桌面端导航栏菜单
 menu_desktop:
